--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,6 @@ html, body {
     height: 100%; /* Ensure body takes full height */
     margin: 0;
     padding: 0;
-    overflow-x: hidden; /* Prevent horizontal scroll */
 }
 
 body {
@@ -12,19 +11,22 @@ body {
     color: #e0e0e0;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden; /* Prevent horizontal scroll */
 }
 
 header {
     background-color: #333;
     padding: 10px;
     text-align: center;
-    width: 100%;
+    position: relative;
+    width: 100%; /* Full width */
     box-sizing: border-box; /* Include padding in width */
 }
 
 header h1 {
     margin: 0;
     color: #e0e0e0;
+    font-size: 1.5em; /* Adjust size for mobile */
 }
 
 .menu-toggle {
@@ -41,8 +43,8 @@ header h1 {
 
 .container {
     display: flex;
-    flex: 1; /* Take up remaining space */
-    min-height: calc(100vh - 60px); /* Adjust based on header/footer height */
+    flex-direction: column; /* Stack sidebar and main content vertically */
+    height: calc(100vh - 40px); /* Full viewport height minus header height */
 }
 
 .sidebar {
@@ -52,7 +54,7 @@ header h1 {
     position: fixed;
     left: 0;
     top: 0;
-    height: 100%;
+    height: calc(100vh - 40px); /* Full height minus header height */
     transform: translateX(-100%);
     transition: transform 0.3s ease;
     z-index: 1000;
@@ -84,7 +86,7 @@ header h1 {
     flex: 1;
     padding: 20px;
     margin-left: 250px; /* Adjust according to sidebar width */
-    box-sizing: border-box;
+    box-sizing: border-box; /* Include padding in width */
 }
 
 .text-center {
@@ -134,7 +136,7 @@ header h1 {
     position: relative;
     margin: 20px auto; /* Center carousel vertically */
     overflow: hidden;
-    width: 100%;
+    width: calc(100% - 30px); /* Full width minus margins */
     max-width: 600px; /* Adjust as needed */
     left: -15px; /* Move carousel 15px to the left */
 }
@@ -185,6 +187,10 @@ footer a:hover {
 
 /* Media queries for mobile devices */
 @media (max-width: 600px) {
+    header h1 {
+        font-size: 1.2em; /* Smaller text size for mobile */
+    }
+
     .welcome-text {
         font-size: 1.5em; /* Smaller text size for mobile */
     }
